Fixed Character Details Input Jumping

--- a/src/styles/actor/character/_character.scss
+++ b/src/styles/actor/character/_character.scss
@@ -140,7 +140,7 @@
             grid-area: details;
             display: grid;
             grid-template-columns: 2fr 3fr;
-            grid-template-rows: repeat(3, 1fr);
+            grid-template-rows: repeat(3, 42px);
             grid-row-gap: 8px;
             padding-left: 12px;
             margin-top: 8px;
